src-errormsg/E19-WrongFieldCount/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E19-WrongFieldCount/Plutarch.hs:36:5: error:
    • The constructor ‘PJoint’ should have 2 arguments, but has been given 1
    • In the pattern: PJoint x
      In a case alternative: PJoint x -> self # pfromData x
      In the expression:
        case w of
          PAmount n -> pfromData n
          PJoint x -> self # pfromData x
          PDeduct n from -> (self # pfromData from) - pfromData n
   |
36 |     PJoint x -> self # pfromData x
   |     ^^^^^^^^
